--- a/private/templates/sbnext-common/settings.twig
+++ b/private/templates/sbnext-common/settings.twig
@@ -33,7 +33,7 @@
 		</tr>
 		<tr>
 			<td class="a"></td>
-			<td class="b"><a href="/userexport">{{ __("Export your user data") }}</a></td>
+			<td class="b"><a href="/userexport" class="spf-link">{{ __("Export your user data") }}</a></td>
 		</tr>
 	</table>
 
