--- a/private/templates/sbnext-common/index.twig
+++ b/private/templates/sbnext-common/index.twig
@@ -16,7 +16,7 @@
 		<div class="card">
 			<div class="card-body-fat">
 				{% if videos %}
-				<a class="button button-secondary float-right spf-link" href="browse.php">{{ __("Browse more") }}</a>
+				<a class="button button-secondary float-right" href="browse.php">{{ __("Browse more") }}</a>
 				{% endif %}
 				{% if log %}
 				<h3 style="margin-top:0">{{ __("Your follow's submissions") }}</h3>
