--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -15,7 +15,7 @@
  {% if userdata.id == video.author %}
    <div class="bg-neutral text-light card card-body">
       <div class="grid">
-         <a class="button button-neutral spf-link" href="/edit.php?v={{video.video_id}}">{{ __("Edit submission") }}</a>
+         <a class="button button-neutral" href="/edit.php?v={{video.video_id}}">{{ __("Edit submission") }}</a>
       </div>
    </div>
 	{% endif %}
@@ -33,7 +33,7 @@
                   <img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
                   <a href="user.php?name={{ video.u_name }}" style="color:{{ video.u_customcolor }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a> • {{ allVideos }} submissions
                   <br>
-                  {% if userdata.id == video.author %}<a class="button button-secondary button-small spf-link" href="/settings">{{ __("Settings") }}</a>{% else %}
+                  {% if userdata.id == video.author %}<a class="button button-secondary button-small">{{ __("Settings") }}</a>{% else %}
                   <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
                   <div class="subscribe-count">{{ subCount }}</div>
                   {% endif %}
