--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -5,7 +5,7 @@
 /// Variables \\\
 @import "_variables";
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://rsms.me/inter/inter.css');
 
 /* SB CSS STARTS HERE ======================================================== */
 
