Replace github link with gitlab link

--- a/private/templates/tailwind-common/_layout.twig
+++ b/private/templates/tailwind-common/_layout.twig
@@ -47,7 +47,7 @@
         </main>
         <footer class="text-center text-slate-500">
             <p>{{ __("© openSB contributors") }}</strong> · 2021-{{ 'now' | date('Y') }} · {{ __("Build") }} {{ version }}</p>
-            <p>{{ __("Running on Git commit: ") }} <a href="https://github.com/qobotv/opensb/commit/{{ git_commit() }}">{{ git_commit() }}</a></p>
+            <p>{{ __("Running on Git commit: ") }} <a href="https://gitlab.com/qobo/opensb/-/commit/{{ git_commit() }}">{{ git_commit() }}</a></p>
         </footer>
     </body>
 </html>
