--- a/private/templates/sbnext-common/userlist.twig
+++ b/private/templates/sbnext-common/userlist.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% set title = "User list" %}
+{% block title %}{{ __("User list") }}{% endblock %}
 
 	{% block content %}
 <h1>User list</h1>
