--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -13,7 +13,7 @@
     {% block content %}{% endblock %}
 </div>
 <footer class="footer">
-    <p>By the openSB Contributors.</p>
+    <p>By the openSB/Betty contributors.</p>
 </footer>
 </body>
 </html>
