--- a/betty/skins/finalium/templates/index.twig
+++ b/betty/skins/finalium/templates/index.twig
@@ -2,7 +2,10 @@
 
 {% block content %}
     <div>
-        {% for submission in videos %}
+        {% if updated %}
+            <div class="header_message header-primary">Options changed!</div>
+        {% endif %}
+        {% for submission in submissions %}
             <div>
                 <a href="/watch.php?v={{ submission.id }}">
                     <h2>{{ submission.title }}</h2>
