--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <title>openSB/Betty</title>
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+    {% if google_tag %}
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_tag }}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', '{{ google_tag }}');
+        </script>
+    {% endif %}
 </head>
 <body>
 <header>
