readd player/image viewing within betty's watch page

--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>openSB/Betty</title>
+    <title>bettySB</title>
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     {% if google_tag %}
         <!-- Google tag (gtag.js) -->
@@ -17,8 +17,8 @@
     {% endif %}
 </head>
 <body>
-<header>
-    <h1>openSB/Betty</h1>
+<header id="masthead-container">
+    <h1>bettySB</h1>
 </header>
 <div class="container">
     {% block content %}{% endblock %}
