move finalium outside private folder

--- a/scss/qobo.scss
+++ b/scss/qobo.scss
@@ -1,7 +1,7 @@
 /// Functions \\\
-@import "_functions";
+@import "functions";
 /// Variables \\\
-@import "_variables";
+@import "variables";
 
 $primary: $pink;
 
@@ -35,4 +35,4 @@ a:visited {
 }
 
 /// Imports \\\
-@import "_imports";
+@import "imports";
