--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>bettySB</title>
+    <title>{{ title }} - bettySB</title>
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     {% if google_tag %}
         <!-- Google tag (gtag.js) -->
