--- a/private/templates/sbnext-common/components/nostalgia/_header.twig
+++ b/private/templates/sbnext-common/components/nostalgia/_header.twig
@@ -4,7 +4,7 @@
 		<div class="masthead-search">
 			<form method="GET" action="search.php">
 				<input class="masthead-input" type="text" value="" name="query" size="30" maxlength="128">
-				<input class="button button-secondary" type="submit" value="Search">
+				<input class="btn btn-default" type="submit" value="Search">
 			</form>
 		</div>
 		<div class="masthead-nav">
