--- a/private/templates/sbnext-common/userlist.twig
+++ b/private/templates/sbnext-common/userlist.twig
@@ -4,7 +4,7 @@
 
 	{% block content %}
 <h1>User list</h1>
-<table class="settings">
+<table class="table table-bordered">
 	<tr>
 		<th style="width:50px">ID</th>
 		<th>Username</th>
