--- a/private/templates/sbnext-common/channels.twig
+++ b/private/templates/sbnext-common/channels.twig
@@ -1,11 +1,11 @@
 {% extends "_layout.twig" %}
 
 {% block content %}
-    <div class="grid">
+    <div class="row">
         {% for user in users|batch(16) %}
             {% for cell in user %}
                 <div class="col-md-1">
-                    <a href="/user.php?name={{ cell.name }}"><img src="{{ profile_image(cell.name) }}" alt="{{ cell.name }}" class="img-fluid rounded" alt="{{ cell.name }}"></a>
+                    <a href="/user.php?name={{ cell.name }}"><img src="{{ profile_image(cell.name) }}" alt="{{ cell.name }}" class="img-responsive rounded" alt="{{ cell.name }}"></a>
                     <h4 style="margin: 0;text-align:center;display:block;"><a
                                 href="/user.php?name={{ cell.name }}">{{ cell.name }}</a></h4>
                 </div>
