--- a/private/templates/sbnext-common/components/browsevideobox.twig
+++ b/private/templates/sbnext-common/components/browsevideobox.twig
@@ -1,9 +1,9 @@
-<div class="card" style="margin-bottom:10px">
+<div class="panel panel-default">
     <div class="card-body text-center">
-        <div class="grid"><a href="watch.php?v={{ data.video_id }}">
+        <div class="row"><a href="watch.php?v={{ data.video_id }}">
                 <div class="col" style="margin-bottom:15px">
                     <div class="img-thumbnail">
-                        <img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}" alt="{{ data.title }}">
+                        <img class="img-responsive" src="{{ video_thumbnail(data.video_id) }}" alt="{{ data.title }}">
                     </div>
                 </div>
             </a>
