--- a/private/templates/sbnext-common/components/comment_form.twig
+++ b/private/templates/sbnext-common/components/comment_form.twig
@@ -1,11 +1,11 @@
-<div class="grid" id="commentField">
+<div class="row" id="commentField">
     <div class="col-md-16">
         <div>
             <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:vertical" rows="3"
                         placeholder="{{ __("Write your comment here.") }}"></textarea>
         </div>
-        <div class="right">
-            <button id="post" class="button button-primary"
+        <div class="text-right">
+            <button id="post" class="btn btn-primary"
                     style="margin-bottom:0;">{{ __("Comment") }}</button>
         </div>
     </div>
