--- a/private/templates/sbnext-common/components/videolist.twig
+++ b/private/templates/sbnext-common/components/videolist.twig
@@ -2,7 +2,7 @@
     {{ small_video_box(video) }}
 {% endfor %}
 <div class="center">
-    <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
+    <div class="btn btn-default" onclick="showMoreVideos()" id="fromUser">
         {{ __("More") }}
     </div>
 </div>
