--- a/private/templates/sbnext-common/components/watch_subscribe.twig
+++ b/private/templates/sbnext-common/components/watch_subscribe.twig
@@ -1,9 +1,9 @@
 {% if userdata.id == video.author %}<a
-    class="button button-secondary button-small"
+    class="btn btn-default btn-sm"
     href="/edit.php?v={{ video.video_id }}">{{ __("Modify submission") }}</a>
 {% else %}
     <button id="subscribe-watch"
-            class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small"
+            class="btn btn-{% if subscribed %}secondary{% else %}primary{% endif %} btn-sm"
             type="button"
             {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
 {% endif %}
