--- a/private/templates/sbnext-common/edit.twig
+++ b/private/templates/sbnext-common/edit.twig
@@ -4,8 +4,8 @@
 
 	{% block content %}
         <form name="uploadForm" id="uploadForm" method="post" action="edit.php" enctype="multipart/form-data">
-            <div class="card">
-                <div class="card-body-fat">
+            <div class="panel panel-default">
+                <div class="panel-body">
                     <input type="hidden" name="vid_id" value="{{ video.video_id }}">
                     <h2 style="margin-bottom: 0.5em;">{{ __("Edit your submission") }}</h2>
                     <p>{{ __("Enter the new information for your submission.") }}</p>
@@ -19,8 +19,8 @@
                             style="overflow:hidden;resize:vertical" rows="3">{{ video.description }}</textarea>
                     <br>
                     <br>
-                    <div class="right">
-                        <input class="button button-primary" type="submit" id="upload" name="upload"
+                    <div class="text-right">
+                        <input class="btn btn-primary" type="submit" id="upload" name="upload"
                             value="{{ __("Save") }}">
                     </div>
                 </div>
