--- a/private/templates/sbnext-common/login.twig
+++ b/private/templates/sbnext-common/login.twig
@@ -4,29 +4,29 @@
 
 	{% block content %}
         {% if error %}
-            <div class="header_message header-danger" role="alert">{{ error }}</div>
+            <div class="alert alert-danger" role="alert">{{ error }}</div>
 			<br>
         {% elseif resetted %}
-            <div class="header_message header-success"
+            <div class="alert alert-success"
                  role="alert">{{ __("Password successfully reset! Please login with your new password.") }}</div>
 			<br>
         {% elseif new_pass %}
-            <div class="header_message header-success"
+            <div class="alert alert-success"
                  role="alert">{{ __("Password successfully reset! Please login with your new password.") }}</div>
 			<br>
         {% elseif new_token %}
-            <div class="header_message header-success"
+            <div class="alert alert-success"
                  role="alert">{{ __("You have been successfully logged out of all devices.") }}</div>
 			<br>
         {% endif %}
 
-        <div class="grid chazizPage">
+        <div class="row">
             <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
                 <h2 class="form-signin-heading">{{ __("Login") }}</h2>
-                <input type="text" name="username" class="input-block-level" placeholder="{{ __("Username") }}">
-                <input type="password" name="password" class="input-block-level" placeholder="{{ __("Password") }}">
+                <input type="text" name="username" class="form-control" placeholder="{{ __("Username") }}">
+                <input type="password" name="password" class="form-control" placeholder="{{ __("Password") }}">
                 <br>
-                <input class="button button-large button-primary" type="submit" value="{{ __("Login") }}"
+                <input class="btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}"
                        name="loginsubmit">
                 <br>
 				<p>{{ __("Don't have an account?") }} <a href="./register.php">{{ __("Register") }}</a>
