--- a/private/templates/sbnext-common/settings.twig
+++ b/private/templates/sbnext-common/settings.twig
@@ -3,10 +3,10 @@
 
 	{% block content %}
     {% if error %}
-        <div class="header_message header-danger" role="alert">{{ error }}</div>
+        <div class="alert alert-danger" role="alert">{{ error }}</div>
     {% endif %}
 <form action="settings.php" method="post" enctype="multipart/form-data">
-	<table class="settings">
+	<table class="table table-bordered">
 		<caption><h3>{{ __("Your account") }}</h3></caption>
 		<tr>
 			<th>{{ __("Option") }}</th>
@@ -38,7 +38,7 @@
 	</table>
 
 	{% if userbandata != true %}
-		<table class="settings">
+		<table class="table table-bordered">
 			<caption><h3>{{ __("Your profile") }}</h3></caption>
 			<tr>
 				<th>{{ __("Option") }}</th>
@@ -72,11 +72,11 @@
 	{% endif %}
 
 	<!-- <h3>{{ __("Miscellaneous") }}</h3>
-	<table class="settings">
+	<table class="table table-bordered">
 	</table> -->
 
 	<input type="hidden" name="magic" value="opensb_settings_save">
-	<div class="right">
-		<input class="button button-primary" type="submit" name="action" value="{{ __("Save Changes") }}">
+	<div class="text-right">
+		<input class="btn btn-primary" type="submit" name="action" value="{{ __("Save Changes") }}">
 	</div>
 	{% endblock %}
