--- a/finalium/assets/stylesheets/finalium.scss
+++ b/finalium/assets/stylesheets/finalium.scss
@@ -45,6 +45,7 @@
 @import "bootstrap/responsive-embed";
 @import "bootstrap/wells";
 @import "bootstrap/close";
+@import "bootstrap/footer";
 
 // Components w/ JavaScript
 @import "bootstrap/modals";
@@ -55,3 +56,6 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+
+// Gradient theme
+@import "bootstrap/theme";
