--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="{{ __("en-US") }}">
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
-    {% block head %}{% endblock %}
-    <link rel="manifest" href="{{ website_branding.assets_location }}/icons/site.webmanifest">
-    <link rel="shortcut icon" href="{{ website_branding.assets_location }}/icons/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ website_branding.assets_location }}/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ website_branding.assets_location }}/icons/favicon-16x16.png">
-    <meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
-    <meta name="application-name" content="{{ website_branding.name }}">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
-    <link rel="stylesheet" href="/assets/css/finalium.css" type="text/css">
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/assets/common.js"></script>
+	<meta charset="utf-8">
+	<title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
+	{% block head %}{% endblock %}
+	<link rel="manifest" href="{{ website_branding.assets_location }}/icons/site.webmanifest">
+	<link rel="shortcut icon" href="{{ website_branding.assets_location }}/icons/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ website_branding.assets_location }}/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ website_branding.assets_location }}/icons/favicon-16x16.png">
+	<meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
+	<meta name="application-name" content="{{ website_branding.name }}">
+	<meta name="theme-color" content="#ffffff">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
+	<link rel="stylesheet" href="/assets/css/finalium.css" type="text/css">
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="/assets/common.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% block script %}{% endblock %}
-    <script>
-        subscribe_string = '{{ __("Follow") }}';
-        unsubscribe_string = '{{ __("Unfollow") }}';
-    </script>
-        {% block customcss %}{% endblock %}
-    </style>
+	<script>
+		subscribe_string = '{{ __("Follow") }}';
+		unsubscribe_string = '{{ __("Unfollow") }}';
+	</script>
+	{% block customcss %}{% endblock %}
+	</style>
 </head>
 <body>
 {% include "components/_header_bs3.twig" %}
@@ -41,31 +41,33 @@
 </div>
 <footer>
 	<div class="footer">
-		<img src="{{ website_branding.assets_location }}/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png" alt="{{ website_branding.name }}">
-		<p><strong>{{ __("© openSB contributors") }}</strong> · 2021-{{ 'now' | date('Y') }}
-			| <strong><a href="/statistics">{{ __("Statistics") }}</a></strong>
-			| <strong><a href="/privacy">{{ __("Privacy Policy") }}</a></strong>
-		</p>
-		<h5>{{ __("Running build %s (Git commit %s)", [version, git_commit()]) }}</h5>
-		{% if isDebug %}
-		<p>{{ __("User agent") }}: {{ user_agent }}</p>
-		<p>{{ __("Current browser") }}: {% if browser_info.name is empty %}{{ __("Unknown browser") }}{% else %}{{ browser_info.name }}{% endif %}</p>
-		{% endif %}
-		{% if isMaintenance != true %}
-			<a class="btn btn-default btn-sm options-button" role="button">{{ __("Options") }}</a>
+		<div class="container">
+			<img src="{{ website_branding.assets_location }}/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png" alt="{{ website_branding.name }}" class="logo">
+			<p><strong>{{ __("© openSB contributors") }}</strong> · 2021-{{ 'now' | date('Y') }}
+				| <strong><a href="/statistics">{{ __("Statistics") }}</a></strong>
+				| <strong><a href="/privacy">{{ __("Privacy Policy") }}</a></strong>
+			</p>
+			<h5>{{ __("Running build %s (Git commit %s)", [version, git_commit()]) }}</h5>
 			{% if isDebug %}
-			<a class="btn btn-danger btn-sm debug-button tooltip" title="Spicy!" role="button">{{ __("Debug") }}</a>
+				<p>{{ __("User agent") }}: {{ user_agent }}</p>
+				<p>{{ __("Current browser") }}: {% if browser_info.name is empty %}{{ __("Unknown browser") }}{% else %}{{ browser_info.name }}{% endif %}</p>
 			{% endif %}
-			<div id="optionsModal" class="bg-neutral" style="padding:0.3em;">
-			</div>
-			{% if isDebug %}
-			<div id="debugModal" class="bg-neutral" style="padding:0.3em;">
-				<h3>Debug info</h3>
-				<div class="alert alert-danger">{{ __("It is risky to screenshot this due to security reasons, so please don't.") }}</div>
-				<p><pre>{{ dump() }}</pre></p>
-			</div>
+			{% if isMaintenance != true %}
+				<a class="btn btn-default btn-sm options-button" role="button">{{ __("Options") }}</a>
+				{% if isDebug %}
+					<a class="btn btn-danger btn-sm debug-button" title="Spicy!" role="button">{{ __("Debug") }}</a>
+				{% endif %}
+				<div id="optionsModal" class="bg-neutral" style="padding:0.3em;">
+				</div>
+				{% if isDebug %}
+					<div id="debugModal" class="bg-neutral" style="padding:0.3em;">
+						<h3>Debug info</h3>
+						<div class="alert alert-danger">{{ __("It is risky to screenshot this due to security reasons, so please don't.") }}</div>
+						<p><pre>{{ dump() }}</pre></p>
+					</div>
+				{% endif %}
 			{% endif %}
-		{% endif %}
+		</div>
 	</div>
 </footer>
 </body>
